# agent-dashboard

./: .dockerignore  .gitattributes  .gitignore  AGENT_OPTIMIZATION_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  README.md  TEST_REPORT.html  TEST_REPORT.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt  test_report.json
.claude/: settings.local.json
Research_Prompts/: AGENT_DASHBOARD_ENHANCEMENT_IMPLEMENTATION.MD  AGENT_OPTIMIZATION_ORCHESTRATOR_PROMPT.md  Expanded Architectural Analysis.md  KVT_Enhancements.md  Neurosymbolic-Implrmentation.md  Phase 2 CompletionFew-Shot Example Implementation.md  Reference_Pattern.md  Updated_KVT.md
agents/: claude-md-auditor.md  critic.md  implementer.md  installer.md  judge-adversarial.md  judge-completeness.md  judge-practicality.md  judge-technical.md  judge-user.md  orchestrator.md  panel-coordinator.md  perplexity-researcher.md  planner.md  prompt-enhancer.md  prompt-validator.md  research-judge.md  researcher.md  summarizer.md  synthesis.md  test-writer.md  validator.md  web-search-researcher.md
commands/: enhance.md  project.md
dashboard/: agent_monitor.py
docs/: CONFIG_REFERENCE.md  EXAMPLE_USAGE.md  IMPLEMENTATION.md  MANUAL_TESTING_STRATEGY.md  MEMORY_ARCHITECTURE.md  NESY-ARCHITECTURE.md  NESY-Integration-Tests-Ledger.md  PROMPT_ENGINEERING_RESEARCH.md  PROMPT_ENHANCEMENT.md  WEB_PORTAL_GUIDE.md  WORKFLOW_FRAMEWORK.md
hooks/: run_hook.py  run_hook.sh  send_event.py
scripts/: demo_workflow.py  docker-start.sh  doctor.sh  generate_test_data.py  generate_test_queries.py  install.py  install.sh  test_workload.py  uninstall.sh  upgrade.sh  validate_test_data.py
specs/: code_reviewer.spec  researcher.spec  summarizer.spec
src/: __version__.py  cli.py  compression_gate.py  css_part.txt  panel_selector.py  synthesis_validator.py  token_counter.py  validation.py  web_server.py  web_server.py.backup  workflow_engine.py
templates/: bug_report_template.md  signoff_form_template.md
tests/: __init__.py  test_agent_definitions.py  test_async_variants.py  test_audit.py  test_bm25.py  test_cli.py  test_community.py  test_compression_gate.py  test_config_reference.py  test_constraints.py  test_cross_platform.py  test_docstring_examples.py  test_dual_embeddings.py  test_embedding_viz.py  test_entity_provenance.py  test_hnsw_index.py  test_hybrid_retriever.py  test_install.py  test_integration.py  test_judges.py  test_knowledge.py  test_learning.py  test_ledger.py  test_panel_selector.py  test_reranker.py  test_schemas.py  test_send_event.py  test_specifications.py  test_summarizer.py  test_synthesis_validator.py  test_temporal_entity.py  test_tiered_token_counter.py  test_token_counter.py  test_validation.py  test_verification.py  (+1 more)
(+90 files in other folders)
