# =============================================================================
# Agent Dashboard v2.5.2 - Python Project Configuration
# =============================================================================
# Modern Python packaging using pyproject.toml (PEP 517/518/621)

[project]
name = "agent-dashboard"
version = "2.5.2"
description = "Real-time monitoring for Claude Code multi-agent workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Agent Dashboard Contributors"}
]
keywords = ["claude", "ai", "monitoring", "dashboard", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# Accurate Claude tokenizer (RECOMMENDED)
tokenizer = [
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
]

# Legacy tiktoken support
tiktoken = [
    "tiktoken>=0.5.0",
]

# Full Anthropic API support (includes official token counting)
anthropic = [
    "anthropic>=0.39.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "transformers>=4.35.0",
    "tiktoken>=0.5.0",
]

# All optional features
all = [
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.39.0",
    "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.scripts]
agent-dashboard = "src.cli:main"

[project.urls]
Homepage = "https://github.com/Koplal/agent-dashboard"
Documentation = "https://github.com/Koplal/agent-dashboard#readme"
Repository = "https://github.com/Koplal/agent-dashboard"
Issues = "https://github.com/Koplal/agent-dashboard/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "hooks*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
